--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,10 +1,10 @@
 ---
-- name: 'Default | converge'
+- name: 'Converge'
   hosts: 'all'
   gather_facts: true  # ansible_kernel
   become: true
   tasks:
-    - name: 'Default | converge | apply r_pufky.deb.zfs'
+    - name: 'Converge | apply r_pufky.deb.zfs'
       ansible.builtin.include_role:
         name: 'r_pufky.deb.zfs'
       vars:
