Migrate to Debian 13.x (Trixie).
Changed:
* nfs-kernel-server package installed automatically when a dataset
  specifies 'sharenfs'. This allows the role to complete without error.
* xattr test update for 2.3.2 - both on/sa are valid options depending
  on the underlying hardware storage system. Update test to pass.
  See: https://openzfs.github.io/openzfs-docs/man/master/7/zfsprops.7.html#xattr

--- a/defaults/main/main.yml
+++ b/defaults/main/main.yml
@@ -27,18 +27,20 @@
 # automatically use the configured NFS server. Complex multi-host exports
 # should be done through nfs_exports.
 #
+# nfs-kernel-server will automatically be installed if 'sharenfs' is defined.
+#
 # zfs_pools:
 #     list of dict - ZFS pool settings.
-#   name: str - ZFS pool name
-#   scrub: str - ZFS scrubbing schedule; uses built-in systemd ZFS scrub timers
+#   name: str - ZFS pool name.
+#   scrub: str - ZFS scrub schedule; uses built-in systemd ZFS scrub timers.
 #       Values:
-#         monthly: scrub monthly.
-#         weekly: scrub weekly.
+#         monthly: Scrub monthly.
+#          weekly: Scrub weekly.
 #         '': disabled.
-#   datasets: list of dict - dataset configuration for pool.
+#   datasets: list of dict - Dataset configuration for pool.
 #         Leave empty list to not manage any datasets.
-#     - name: str - dataset name.
-#       properties: list of dict - properties to enforce for dataset.
+#     - name: str - Dataset name.
+#       properties: list of dict - Properties to enforce for dataset.
 #         - option: str - ZFS dataset option.
 #           value: str - ZFS dataset option value.
 #
