--- a/tasks/prep.yml
+++ b/tasks/prep.yml
@@ -12,9 +12,12 @@
         item.scrub is search("weekly") or
         item.scrub is search("monthly")
     fail_msg: |
-      ✘ zfs_pools must always be fully defined.
-
-      {{ item.name }}.scrub is missing or incorrect.
+      ╭───────────────────────────────────────────────────────────────────╮
+      │                                                                   │
+      │              zfs_pools must always be fully defined.              │
+      │                                                                   │
+      ├───────────────────────────────────────────────────────────────────╯
+      │ {{ item.name }}.scrub is missing or incorrect.
   loop: '{{ zfs_pools }}'
   loop_control:
     label: '{{ item.name | default("") }}'
@@ -25,9 +28,12 @@
     that:
       - '"datasets" in item'
     fail_msg: |
-      ✘ zfs_pools must always be fully defined.
-
-      {{ item.name }}.datasets is missing or incorrect.
+      ╭───────────────────────────────────────────────────────────────────╮
+      │                                                                   │
+      │              zfs_pools must always be fully defined.              │
+      │                                                                   │
+      ├───────────────────────────────────────────────────────────────────╯
+      │ {{ item.name }}.datasets is missing or incorrect.
   loop: '{{ zfs_pools }}'
   loop_control:
     label: '{{ item.name | default("") }}'
@@ -42,9 +48,25 @@
       - zfs_snapshot_remote_server | length > 0
       - zfs_snapshot_remote_port > 0
     fail_msg: |
-      ✘ ZFS snapshots require minimum configuration:
+      ╭───────────────────────────────────────────────────────────────────╮
+      │                                                                   │
+      │           ZFS snapshots require minimum configuration.            │
+      │                                                                   │
+      ├───────────────────────────────────────────────────────────────────╯
+      │ zfs_snapshot_remote_user: {{ zfs_snapshot_remote_user }}
+      │ zfs_snapshot_remote_pool: {{ zfs_snapshot_remote_pool }}
+      │ zfs_snapshot_remote_server: {{ zfs_snapshot_remote_server }}
+      │ zfs_snapshot_remote_port: {{ zfs_snapshot_remote_port }}
 
-        zfs_snapshot_remote_user: {{ zfs_snapshot_remote_user }}
-        zfs_snapshot_remote_pool: {{ zfs_snapshot_remote_pool }}
-        zfs_snapshot_remote_server: {{ zfs_snapshot_remote_server }}
-        zfs_snapshot_remote_port: {{ zfs_snapshot_remote_port }}
+- name: 'Prep | check ZFS NFS export settings'
+  ansible.builtin.set_fact:
+    _zfs_nfs_required: '{{
+        true
+        if
+          zfs_pools | map(attribute="datasets") |
+          flatten | map(attribute="properties") |
+          flatten | selectattr("option", "equalto", "sharenfs") |
+          list | length > 0
+        else
+        false
+      }}'
