--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,8 +4,8 @@
 ###############################################################################
 
 # Last time ZFS options were validated against a default configuration.
-zfs_role_validate_date: '2024-06-14'
-zfs_role_validate_release: 'bookworm'
+zfs_role_validate_date: '2025-08-22'
+zfs_role_validate_release: 'trixie'
 
 ###############################################################################
 # APT Packages
@@ -22,6 +22,9 @@ zfs_role_packages:
   - 'dpkg-dev'
   - 'linux-headers-amd64'
   - 'linux-image-amd64'
+
+zfs_role_nfs_packages:
+  - 'nfs-kernel-server'
 
 ###############################################################################
 # Default ZFS User/Group
