Update VM to Trixie image.

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -42,8 +42,7 @@ provisioner:
         zfs_pools_restart_share_enable: true
 platforms:
   - name: 'zfs-debian-13-vm-default'
-    # TODO(role): switch to debian/trixie64 when released.
-    box: 'debian/testing64'
+    box: 'inception-of-things/debian-trixie'
     memory: 4096
     cpus: 2
     interfaces:
