--- a/molecule/dataset/molecule.yml
+++ b/molecule/dataset/molecule.yml
@@ -36,8 +36,7 @@ provisioner:
         zfs_pools_restart_share_enable: true
 platforms:
   - name: 'zfs-debian-13-vm-dataset'
-    # TODO(role): switch to debian/trixie64 when released.
-    box: 'debian/testing64'
+    box: 'inception-of-things/debian-trixie'
     memory: 4096
     cpus: 2
     interfaces:
